# PTOAS

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_en.md  ReleaseNotes.md  rmsnorm.pto  vpto-spec.md
.github/workflows/: build_wheel.yml  build_wheel_mac.yml  ci.yml  ci_sim.yml
.planning/: ROADMAP.md  STATE.md
cmake/: LinuxHardeningCache.cmake
docker/: Dockerfile
docs/: 2026-03-13-tpop-pipe-interface-spec-zh.md  PTOAS-TPUSH-TPOP-TPIPE-测试串讲.md  PTO_IR_manual.md  build_with_installed_llvm.md  pto_backend_followup_plan.md  pto_backend_july_plan.md  tilelang-dsl-guide.md  vpto-spec.md
docs/designs/: 2026-03-28-tile-to-vector-template-design.md  2026-03-31-tile-to-vector-template-design.md  2026-04-08-tload-tstore-tilelang-template-design.md  TileLang_RMSNorm_PersistentBuffer_Design.md  TileLang_RMSNorm_PersistentFragment_Design.md  TileLang_RMSNorm_to_PTO_Design.md  a2a3-vpto-elementwise-impl.md  ci-board-validation-guide.md  ptoas-memory-consistency-design.md  ptoas-multi-buffer-explicit-design.md  ptoas-tileop-expand-design.md  ptoas-tpush-tpop-design.md  ptoas_persistent_simt_fragment_plan.md  ptodsl-redesign-of-simd-simt-cube-subkernel.md  ptodsl-simt-micro-op-api-design.md  tilelang-st-framework.md
docs/isa/: 01-pipeline-sync.md  02-dma-copy.md  03-vector-load-store.md  04-predicate-load-store.md  05-materialization-predicate.md  06-unary-vector-ops.md  07-binary-vector-ops.md  08-vec-scalar-ops.md  09-conversion-ops.md  10-reduction-ops.md  11-compare-select.md  12-data-rearrangement.md  13-dsa-sfu-ops.md  14-shared-arith.md  15-shared-scf.md
docs/plans/: 2026-03-05-cv-separation-design-v2.md  2026-03-05-cv-separation-fixes-design.md  2026-03-05-cv-separation-fixes-plan.md  2026-03-05-cv-separation-plan-v2.md  2026-03-06-a5-onchip-path-design.md  2026-03-06-tpush-tpop-design-zh.md  2026-03-06-tpush-tpop-design.md
docs/tile_fusion/: a5_oplib_v1_authoring.md  oplib_ir_spec.md  oplib_lowering_tile_fusion_design_v1.md  oplib_simd_template_min_guide.md  tile_fusion_design_spec.md  tile_fusion_user_design_v1.md
lib/: CMakeLists.txt
lib/Bindings/Python/: CMakeLists.txt  PTOModule.cpp
lib/CAPI/Dialect/: CMakeLists.txt  PTO.cpp
lib/TileOps/: tload_template.py  tstore_template.py
oplib/level3/: family_dsl.py  generate_level3_templates.py
ptodsl/: README.md
ptodsl/docs/: summary.md  tilelib-fix-patterns.md  tilelib-migration-testing.md
ptodsl/examples/: example_int64_stride_vectorize_load.py  example_simtvf_multi_kernel.py  example_simtvf_vector_add.py  fast_hadamard_launch.py
ptodsl/ptodsl/: _ops.py  _pipe_namespace.py  _surface_types.py  _tile_namespace.py  _types.py  pto.py
ptodsl/tests/: test_ast_rewrite_example_ir.py  test_docs_as_test.py  test_jit_compile.py  test_ptoas_frontend_verify.py  test_tilelib_catalog.py  test_tilelib_constraints.py  test_tilelib_daemon.py  test_tilelib_select.py  test_tileop.py  test_vector_cube_ops.py
python/: CMakeLists.txt
scripts/: batch_compile_output_cpp.sh  batch_generate_output_npu_testcases.sh  bootstrap_ptoas.sh  gen_pto_isa_st_samples.py  ptoas_env.sh  run_output_npu_validation.sh
test/: lit.cfg.py
test/basic/: cv_a5_sync.mlir  (+46 more)
test/samples/CppVPTOTAddBuilder/: CMakeLists.txt  build.sh  main.cpp  vadd.pto
(+945 files in other folders)
